Prevent the site title link from wrapping, even if it's long

--- a/client/common/sass/components/_menu.sass
+++ b/client/common/sass/components/_menu.sass
@@ -12,8 +12,8 @@
 		background-color: #F8F8F8
 
 	&__title-wrapper
-		min-width: 11.5rem
 		display: inline-block
+		flex-shrink: 0
 
 .site-title-link
 	z-index: 1010
